syntax = "proto3";

package member;

service MemberService {
  rpc GetMemberRelations(MemberRequest) returns (MemberResponse);
}

message MemberRequest {
  int64 memberSeq = 1;
}

message MemberResponse {
  int64 memberSeq = 1;
  repeated int64 followers = 2;
  repeated int64 followings = 3;
  repeated int64 blockMembers = 4;
}
